--- a/micro_content_manager/templates/micro_content_manager/create.html
+++ b/micro_content_manager/templates/micro_content_manager/create.html
@@ -1,13 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
 
+<style>
 
+
+</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
     <link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
 
     <title>Create Micro Content</title>
@@ -18,6 +21,8 @@
     <script>
          $(document).ready(function() {    //llamamos la a funcion ready() porque vamos a hacer referencia a etiquetas que estan declaradas posteriormente en el documento
                     document.getElementById("addQuestion").addEventListener("click", addQuestion, false);
+                    document.getElementById("sortQuestions").addEventListener("click", sortQuestions, false);
+
                     var del = document.querySelectorAll("#questions-container span");
                       for (var i=0;i<del.length;i++) {
                           del[i].addEventListener("click",deleteQuestion, false);
@@ -28,7 +33,7 @@
 
               var id = num.target.id;
               id = id.toString();
-              i =  id[7];
+              i =  id[7];         /*Getting the number of the question*/
               $("#q"+i).replaceWith("<span> </span>");
          }
 
@@ -39,8 +44,26 @@
 
                     var id = $("#idQuestions").val();
 
-                    $("#newQuestions-container").append("<div id=\"q"+id+"\" >");
+                    $("#questions-container").append("<div class=\"quest\"  id=\"q"+$("#idQuestions").val()+"\" style=\"order: "+$("#idQuestions").val()+";\">");
 
+
+
+                     $("#q"+id).append("<section>\n" +
+                         "                                        <label><strong>Position in the Quiz: </strong>\n" +
+                         "                                            <select name=\"order"+$("#idQuestions").val()+"\" id=\"order"+$("#idQuestions").val()+"\" onchange=\"applyPosition("+$("#idQuestions").val()+")\">\n" +
+                         "                                                 <option value=1 selected>1</option>\n" +
+                         "                                                 <option value=2>2</option>\n" +
+                         "                                                 <option value=3>3</option>\n" +
+                         "                                                 <option value=4>4</option>\n" +
+                         "                                                 <option value=5>5</option>\n" +
+                         "                                                 <option value=6>6</option>\n" +
+                         "                                                 <option value=7>7</option>\n" +
+                         "                                                 <option value=8>8</option>\n" +
+                         "                                                 <option value=9>9</option>\n" +
+                         "                                                 <option value=10 selected>10</option>\n" +
+                         "                                            </select>\n" +
+                         "                                        </label>\n" +
+                         "                                    </section>");
                      $("#q"+id).append("<p>Question "+$("#idQuestions").val()+": <textarea name=\"question"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
                          "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button red delete-box\">Delete question</span></p></p>");
                      $("#q"+id).append("<p>Choices "+$("#idQuestions").val()+" (write the possible answers and select the correct one):</p>\n");
@@ -60,14 +83,17 @@
                         $("#q"+id).append("<p>Explanation "+$("#idQuestions").val()+": <textarea name=\"explanation"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
                                  "                                                                cols=\"100\"></textarea></p></div><br><br>");
                      document.getElementById("deleteq"+id).addEventListener("click", deleteQuestion, false);
+            }
+
+         function storeURL() {
+             document.getElementById("stURL").value = document.getElementById("chooseFile").value;
          }
 
+        function applyPosition(numberQuestion) {
+                order = document.getElementById("order"+numberQuestion).value;
+                $("#q"+numberQuestion).css("order", order);
+        }
 
-
-
-            function storeURL() {
-                document.getElementById("stURL").value = document.getElementById("chooseFile").value;
-            }
        </script>
 
 
@@ -78,7 +104,6 @@
             <div class="white">
                 <h2>Content</h2>
                 <fieldset>
-
                     <section><p><label for="title">Title: <input type="text" placeholder="Title" name="title"></label></p></section>
                     <section><p>Tags: <input type="text" name="mc_tags">
                      (Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3))</p></section>
@@ -96,8 +121,7 @@
                                 <option value="mp4" selected>mp4</option>
                                 <option value="ogg">ogg</option>
                             </select>
-                        </p>
-                        </section>
+                        </p></section>
                         <section>
                         <p>Upload form:
                             <select name="video_upload_form{{ forloop.counter }}">
@@ -110,45 +134,56 @@
                 </fieldset>
 
                 <fieldset>
-
-                            <div id="addQuestion-container">
-                                <h2>Quiz</h2>
-                                <h5 id="addQuestion" class="button green">Add Question</h5>
+                    <form action="create.html">
+                    <div id="addQuestion-container">
+                                <h2 id="test">Quiz</h2>
+                                <h5 id="addQuestion" class="button green">Add Question </h5>
                             </div>
                         <br><br><br><br>
 
+                        <div id="questions-container" style="display: flex; flex-direction: column;" >
+                            {% for q in questions %}
+                                    <div class="quest"  id="q{{ forloop.counter }}" style="order: {{ forloop.counter }};">
+                                    <section>
+                                        <label><strong>Position in the Quiz: </strong>
+                                            <select name="order{{ forloop.counter }}" id="order{{ forloop.counter }}" onchange="applyPosition({{ forloop.counter }})">
+                                                 <option {% if forloop.counter == 1 %} selected {% endif %} value=1>1</option>
+                                                 <option {% if forloop.counter == 2 %} selected {% endif %}value=2>2</option>
+                                                 <option {% if forloop.counter == 3 %} selected {% endif %} value=3>3</option>
+                                                 <option {% if forloop.counter == 4 %} selected {% endif %} value=4>4</option>
+                                                 <option {% if forloop.counter == 5 %} selected {% endif %}  value=5>5</option>
+                                                 <option {% if forloop.counter == 6 %} selected {% endif %} value=6>6</option>
+                                                 <option {% if forloop.counter == 7 %} selected {% endif %} value=7>7</option>
+                                                 <option {% if forloop.counter == 8 %} selected {% endif %} value=8>8</option>
+                                                 <option {% if forloop.counter == 9 %} selected {% endif %} value=9>9</option>
+                                                 <option {% if forloop.counter == 10 %} selected {% endif %} value=10>10</option>
+                                            </select>
+                                        </label>
+                                    </section>
+                                        <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
+                                                                                     cols="80"></textarea><span id="deleteq{{ forloop.counter }}" class="button red delete-box" style="text-indent: 10px;">Delete question</span></p>
+                                        <div style="margin-left: 100px;">
+                                            <p>Choices {{ forloop.counter }} (write the possible answers and select the correct one):</p>
+                                            {% for c in choices %}
+                                                <p>
+                                                    <input type="radio" name="answer{{ forloop.parentloop.counter }}"
+                                                           value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
+                                                           {% if forloop.counter == 1 %}checked {% endif %}>
+                                                    <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}">
+                                                </p>
+                                            {% endfor %}
+                                        </div>
+                                        <br>
+                                        <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
+                                                                                     cols="100"></textarea></p>
+                                        <br><br>
 
-                        <div id="questions-container">
-                        {% for q in questions %}
+                                    </div>
+                            {% endfor %}
 
-                            <div id="q{{ forloop.counter }}">
-                                <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
-                                                                             cols="80"></textarea><span id="deleteq{{ forloop.counter }}" class="button red delete-box" style="text-indent: 10px;">Delete question</span></p>
-                                <div style="margin-left: 100px;">
-                                    <p>Choices {{ forloop.counter }} (write the possible answers and select the correct one):</p>
-                                    {% for c in choices %}
-                                        <p>
-                                            <input type="radio" name="answer{{ forloop.parentloop.counter }}"
-                                                   value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
-                                                   {% if forloop.counter == 1 %}checked {% endif %}>
-                                            <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}">
-                                        </p>
-                                    {% endfor %}
-                                </div>
-                                <br>
-                                <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
-                                                                             cols="100"></textarea></p>
-                                <br><br>
-
-                            </div>
-                        {% endfor %}
+                            <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
                         </div>
-
-                        <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
-                        <div id="newQuestions-container">
-
-                        </div>
-
+                    </form>
                         <input type="hidden" id="author" name="author" value={{ user.username }}>
                         <input type="hidden" id="creation_type" name="creation_type" value="own creation">
                         <input class="button" type="submit" value="Create" style="background-color: green; margin: 0px 300px 100px 0px;">
@@ -157,5 +192,11 @@
         </form>
 
     </div>
+
+
+<script>
+
+
+</script>
 </body>
 </html>
