Search by title and style of small windows completed.

--- a/micro_content_manager/templates/micro_content_manager/copy.html
+++ b/micro_content_manager/templates/micro_content_manager/copy.html
@@ -1,19 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>You copied the Micro Content</title>
-    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
-
+    <link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 </head>
 
-
-<body>
-    <h4>You just copied the Micro content! </h4>
-
-    <p>You copied the <strong>'{{ micro_content.title }}'</strong> micro content.</p>
-
-    <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Back to search page</a></p>
-
+<body class="bg-study">
+	<div class="body">
+        <div class="sky-form">
+            <div class="white">
+                <fieldset>
+                    <div class="wrapper">
+                        <div class="row">
+                            <section>
+                                    <p style="font-size: 18px;">You copied the <strong>'{{ micro_content.title }}'</strong> micro content.</p>
+                            </section>
+                        </div>
+                        <div class="row">
+                            <div class="col span4">
+                                <section>
+                                    <a href="{% url 'micro_content_manager:micro_content_search' 1 %}" class="button" style="margin-left: 0px!important; color: white!important;">Back to search page</a>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
