--- a/micro_content_manager/templates/micro_content_manager/create.html
+++ b/micro_content_manager/templates/micro_content_manager/create.html
@@ -115,12 +115,6 @@
                     {% for v in videos %}
                         <section><h4>Video {{ forloop.counter }}</h4></section>
                         <section><span>URL:&nbsp;<input name="videoURL{{ forloop.counter }}" type="url"></span></section>
-                        <section><p>Format:
-                            <select name="videoFormat{{ forloop.counter }}">
-                                <option value="mp4" selected>mp4</option>
-                                <option value="ogg">ogg</option>
-                            </select>
-                        </p></section>
                         <section>
                         <p>Upload form:
                             <select name="video_upload_form{{ forloop.counter }}">
@@ -133,7 +127,6 @@
                 </fieldset>
 
                 <fieldset>
-                    <form action="create.html">
                     <div id="addQuestion-container">
                                 <h2 id="test">Quiz</h2>
                                 <h5 id="addQuestion" class="button green">Add Question </h5>
@@ -182,10 +175,29 @@
 
                             <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
                         </div>
-                    </form>
-                        <input type="hidden" id="author" name="author" value={{ user.username }}>
-                        <input type="hidden" id="creation_type" name="creation_type" value="own creation">
-                        <input class="button" type="submit" value="Create" style="background-color: green; margin: 0px 300px 100px 0px;">
+
+
+                </fieldset>
+
+            <fieldset>
+
+                <section>Do you want your micro-content to be visible?
+                    <select name="visible">
+                                    <option value="yes" selected>Yes</option>
+                                    <option value="no"> No</option>
+                    </select>
+                </section>
+
+                <section>Allow other users to copy your micro-content?
+                    <select name="allow_copy">
+                                    <option value="yes" selected>Yes</option>
+                                    <option value="no">No</option>
+                    </select>
+                </section>
+
+                <input type="hidden" id="author" name="author" value={{ user.username }}>
+                <input type="hidden" id="creation_type" name="creation_type" value="own creation">
+                <input class="button" type="submit" value="Create" style="background-color: green; margin: 0px 300px 100px 0px;">
             </fieldset>
             </div>
         </form>
