--- a/micro_content_manager/templates/micro_content_manager/micro_content_info.html
+++ b/micro_content_manager/templates/micro_content_manager/micro_content_info.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
-        	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+        <link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
 
 	</head>
 	<body class="bg-study">
@@ -85,7 +85,13 @@
                         </section>
                     </fieldset>
 				<footer>
-                    <a class="button" href="{% url 'micro_content_manager:edit' micro_content.id %}" style="background-color: green;">Edit</a>
+                    {% if user.username == micro_content.meta_data.author %}
+                            <a class="button" href="{% url 'micro_content_manager:edit' micro_content.id %}" style="background-color: green;">Edit</a>
+                    {% else %}
+                        {% if micro_content.allow_copy == "yes" %}
+                             <a class="button" href="{% url 'micro_content_manager:copy' micro_content.id %}" style="background-color: green;">Copy</a>
+                        {% endif %}
+                    {% endif %}
 				</footer>
 			</form>
 
