--- a/users_manager/templates/users_manager/confirm_registration.html
+++ b/users_manager/templates/users_manager/confirm_registration.html
@@ -9,8 +9,27 @@
     	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
 
 </head>
-<body>
-    <h4>'The administrator will confirm your registration shortly. You will receive an email with the confirmation'</h4>
-    <a href="{% url 'login' %}">Back to log in</a>
+
+
+
+
+<body class="bg-study">
+
+	<div class="body">
+        <div class="sky-form">
+            <div class="white">
+                <fieldset>
+                    <div class="wrapper">
+                        <div class="row">
+                            <section>
+                                <p style="font-size: 18px!important;">The administrator will confirm your registration shortly. You will receive an email with the confirmation.</p>
+                            </section>
+                        </div>
+
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
