--- a/micro_content_manager/templates/micro_content_manager/store.html
+++ b/micro_content_manager/templates/micro_content_manager/store.html
@@ -5,17 +5,34 @@
     <meta charset="UTF-8">
     <title>Store</title>
     	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 
 </head>
-<body>
 
-<h1>Micro-learning contents generator</h1>
+<body class="bg-study">
 
-<h2>Your micro-learning content has been stored successfully!</h2>
-
-<p>The micro-learning content has been stored in <a href="{{ url }}">{{ url }}</a></p>
-<p>Click <a href="download?content={{ id }}">here</a> to download the HTML file of your micro-learning content</p>
-<p><a class="button" href="{% url 'user_page' %}">Go home</a></p>
-
+	<div class="body">
+        <div class="sky-form">
+            <div class="white">
+                <fieldset>
+                    <div class="wrapper">
+                        <div class="row">
+                            <section>
+                                <p style="font-size: 18px!important;">Your micro-learning content has been stored successfully!</p>
+                            </section>
+                        </div>
+                        <div class="row">
+                            <div class="col span4">
+                                <section>
+                                    <a href="{% url 'micro_content_manager:micro_content_search' 1 %}" class="button" style="margin-left: 0px!important; color: white!important;">Go to search page</a>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
